--- a/src/app/features/public/contact-us/contact-us.component.html
+++ b/src/app/features/public/contact-us/contact-us.component.html
@@ -1,1 +1,31 @@
-<p>contact-us works!</p>
+<div class="container">
+    <div class="mt-5">
+        <div class="col-11 col-md-6 col-lg-4 mx-auto">
+            <h1>Contact us!</h1>
+
+            <form #form="ngForm" (ngSubmit)="onFormSubmit()">
+                
+                <div class="mt-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="name" class="form-control" id="name" name="name"
+                    [(ngModel)]="model.name">
+                </div>
+
+                <div class="mt-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email"
+                    [(ngModel)]="model.email">
+                </div>
+                
+                <div class="mt-3">
+                    <label for="comment" class="form-label">Comment</label>
+                    <textarea type="text" class="form-control" id="comment" name="comment" [(ngModel)]="model.comment"></textarea>
+                </div>              
+
+                <div class="mt-3">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
