--- a/src/app/features/public/about/about.component.html
+++ b/src/app/features/public/about/about.component.html
@@ -1,1 +1,30 @@
-<p>about works!</p>
+<main role="main" class="container">
+    <div class="main_part">
+        <h1>About page</h1>
+        <p>The project was completed by the student of the Software Development SE-212
+            <br>
+            Confrerences and scheludules for the speakers are the main priorities for the project
+        </p>
+        <h5>Completed by Yaroslav Kohut</h5>
+    </div>
+
+    <div class="follow_me">
+        <h2>Follow me</h2>
+        <div>
+            <a class="text-dark" href="https://github.com/Yaroslav3947">
+                <i class="bi bi-github">Yaroslav3947</i> 
+              </a>
+            <br>
+
+            <a class="text-dark" href="www.linkedin.com/in/yaroslav-kohut-2636a1212">
+                <i class="bi bi-linkedin">Yaroslav Kohut</i> 
+              </a>
+              
+        </div>
+    </div>
+
+    <div class="gif-container">
+        <img src="https://media.giphy.com/media/eh9iOB34FwMow/giphy.gif?cid=ecf05e47njdev6gufer60bshbb5umqq9k4obeh1k9hckr2qm&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="GIF">
+    </div>
+
+</main>
