upd links in about component

--- a/src/app/features/public/about/about.component.html
+++ b/src/app/features/public/about/about.component.html
@@ -16,7 +16,7 @@
               </a>
             <br>
 
-            <a class="text-dark" href="www.linkedin.com/in/yaroslav-kohut-2636a1212">
+            <a class="text-dark" href="https://www.linkedin.com/in/yaroslav-kohut-2636a1212/">
                 <i class="bi bi-linkedin">Yaroslav Kohut</i> 
               </a>
               
