--- a/src/app/features/public/services/services.component.html
+++ b/src/app/features/public/services/services.component.html
@@ -1,1 +1,26 @@
-<p>services works!</p>
+<div class="container">
+    <div class="mt-5">
+        <div class="row align-items-strech">
+            <ng-container *ngIf="events$ | async as events">
+                <div class="col-12 col-md-4 mb-3" *ngFor="let event of events">
+                    <div class="card h-100">
+                        <img [src]="event.image" class="card img-top" [alt]="event.name">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-name">
+                                {{event.name}}
+                            </h5>
+                            <p class="card-text">
+                                {{event.description}}
+                            </p>
+                            <!-- <span class="d-flex align-items-end" style="flex: 1">
+                                <a #href="event.url" class="btn btn-primary">
+                                    Read More
+                                </a>
+                            </span> -->
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+    </div>
+</div>
