added styles for ServicesComponent

--- a/src/app/features/public/portfolio/portfolio.component.html
+++ b/src/app/features/public/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="mt-5">
+    <div class="mt-5 mb-5">
         <div class="row align-items-strech">
             <div class="col-12 col-md-4 mb-3" *ngFor="let photo of photos">
                 <div class="card h-100">
