--- a/src/app/features/public/home/home.component.css
+++ b/src/app/features/public/home/home.component.css
@@ -1,30 +1,38 @@
+.container {
+    position: relative;
+    text-align: center;
+    max-width: 100%;
+    padding: 0;
+}
+
 .conference {
     position: absolute;
     top: 15%;
     left: 30%;
     transform: translate(-50%, -50%);
-    font-size: 132px;
+    font-size: 8vw;
     font-weight: bold;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .conference-text {
+    margin-top: 3%;
     position: absolute;
     top: 30%;
-    left: 41%;
+    left: 40%;
     transform: translate(-50%, -50%);
     text-align: left;
     color: #ffffff;
-    font-size: 24px;
+    font-size: 2vw;
 }
 
 .quote {
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 71%;
     transform: translateX(-50%);
     font-style: italic;
-    font-size: 24px;
+    font-size: 2vw;
     color: #ffffff;
 }
