--- a/src/app/features/public/home/home.component.html
+++ b/src/app/features/public/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div style="position: relative; text-align: center;">
     <img class="mt-3 mb-5" src="https://images.unsplash.com/photo-1561489396-888724a1543d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="People in Conference"
     style="width: 100%; max-width: 2000px;">
@@ -15,4 +16,5 @@
     </div>
     
   </div>
+</div>
   
