--- a/src/app/features/public/about/about.component.html
+++ b/src/app/features/public/about/about.component.html
@@ -1,30 +1,61 @@
-<main role="main" class="container">
+<main role="main" class="container mb-5">
     <div class="main_part">
         <h1>About page</h1>
-        <p>The project was completed by the student of the Software Development SE-212
-            <br>
-            Confrerences and scheludules for the speakers are the main priorities for the project
-        </p>
-        <h5>Completed by Yaroslav Kohut</h5>
+        <strong>Please read this article till the end</strong>
+        <article>
+            <p>The project was completed by the student of the Software Development SE-212
+                <br>
+                Confrerences and scheludules for the speakers are the main priorities for the project
+            </p>
+        </article>
+        <h5>
+            <em>Completed by Yaroslav Kohut</em>
+        </h5>
     </div>
+    
 
     <div class="follow_me">
         <h2>Follow me</h2>
         <div>
-            <a class="text-dark" href="https://github.com/Yaroslav3947">
-                <i class="bi bi-github">Yaroslav3947</i> 
-              </a>
-            <br>
+            <address>
+                <a class="text-dark" href="https://github.com/Yaroslav3947">
+                    <i class="bi bi-github">Yaroslav3947</i> 
+                </a>
+                <br>
 
-            <a class="text-dark" href="https://www.linkedin.com/in/yaroslav-kohut-2636a1212/">
-                <i class="bi bi-linkedin">Yaroslav Kohut</i> 
-              </a>
-              
+                <a class="text-dark" href="https://www.linkedin.com/in/yaroslav-kohut-2636a1212/">
+                    <i class="bi bi-linkedin">Yaroslav Kohut</i> 
+                </a>
+            </address>
+            <div class="mb-3">
+                <mark>Thank you for your attention</mark>
+            </div>
+            
+        </div>
+        <div>
+            <details>
+                <summary>Bye Bye</summary>
+                Hello, you have just opened the details to see my secret message to you
+              </details>
+        </div>
+
+        <div class="mt-3">
+            <p>Check my code example</p>
+            <pre>
+                <code>
+                for(int i = 0;i<10;i++) 
+                    console.log("What do you think about my code?")   
+                </code>
+            </pre>
         </div>
     </div>
 
     <div class="gif-container">
-        <img src="https://media.giphy.com/media/eh9iOB34FwMow/giphy.gif?cid=ecf05e47njdev6gufer60bshbb5umqq9k4obeh1k9hckr2qm&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="GIF">
+        <figure>
+            <img src="https://media.giphy.com/media/eh9iOB34FwMow/giphy.gif?cid=ecf05e47njdev6gufer60bshbb5umqq9k4obeh1k9hckr2qm&ep=v1_gifs_search&rid=giphy.gif&ct=g" 
+                    alt="MotoGIF">
+            <figcaption>Moto</figcaption>
+        </figure>    
     </div>
 
 </main>
