--- a/src/app/features/public/portfolio/portfolio.component.html
+++ b/src/app/features/public/portfolio/portfolio.component.html
@@ -1,16 +1,8 @@
 <div class="container">
-    <div class="mt-5 mb-5">
-        <div class="row align-items-strech">
-            <div class="col-12 col-md-4 mb-3" *ngFor="let photo of photos">
-                <div class="card h-100">
-                    <img [src]="photo.urls.regular" alt="{{ photo.description }}">
-                    <div class="card-body d-flex flex-column">
-                        <p class="card-text">
-                            {{photo.description}}
-                        </p>
-                    </div>
-                </div>
-            </div>
+    <div class="photo-gallery">
+        <div class="photo" *ngFor="let photo of photos">
+            <img [src]="photo.urls.regular" alt="{{ photo.description }}">
+            <p>{{photo.description}}</p>
         </div>
     </div>
 </div>
