--- a/src/app/features/public/contact-us/contact-us.component.html
+++ b/src/app/features/public/contact-us/contact-us.component.html
@@ -32,6 +32,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label>Send Report via Email?</label><br>
+                    <input type="radio" name="sendReport" [(ngModel)]="model.sendReport" [value]="true"> Send<br>
+                    <input type="radio" name="sendReport" [(ngModel)]="model.sendReport" [value]="false"> Do not send
+                </div>
+
+                <div class="form-group">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </form>
