--- a/src/app/features/public/services/services.component.css
+++ b/src/app/features/public/services/services.component.css
@@ -24,8 +24,36 @@
     transition: all 0.15s ease-in-out;
 }
 
-.btn-buy:hover {
+.button-style:hover {
     background-color: #0056b3;
     border-color: #0056b3;
 }
 
+.main_part {
+    margin-bottom: 5%;
+}
+
+.card_body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 15px;
+    flex: 1;
+}
+
+.button-style {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.card_style {
+    height: 100%;
+    display: flex;
+    flex-direction: column;   
+}
