--- a/src/app/features/public/services/services.component.html
+++ b/src/app/features/public/services/services.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-    <div class="mb-5 mb-5">
+    <div class="main_part">
         <div class="row align-items-strech">
             <ng-container *ngIf="events$ | async as events">
                 <div class="col-12 col-md-4 mb-3" *ngFor="let event of events">
-                    <div class="card h-100">
+                    <div class="card_style">
                         <img [src]="event.image" class="card img-top" [alt]="event.name">
-                        <div class="card-body d-flex flex-column">
+                        <div class="card_body">
                             
                             <ng-container *ngIf="event.priceRangeMin !== null && event.priceRangeMax !== null">
                                 <h4>${{ event.priceRangeMin }} - ${{ event.priceRangeMax }}</h4>
@@ -26,7 +26,7 @@
                             </p>
 
                             <span>
-                                <a [href]="event.url" class="btn btn-buy">
+                                <a [href]="event.url" class="button-style">
                                     Buy ticket
                                 </a>
                             </span>
