--- a/src/app/features/public/services/services.component.css
+++ b/src/app/features/public/services/services.component.css
@@ -50,6 +50,16 @@
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    animation: buttonAnimation 1s infinite alternate;
+}
+
+@keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.1);
+    }
 }
 
 .card_style {
